@@ -7,7 +7,7 @@
     <string id="30004">Filmmakers</string>
     <string id="30005">Separatori del Cast</string>
         
-    <string id="30100">Votazione</string>
+    <string id="30100">Votazione (mymovies.it)</string>
     <string id="30101">In 10esimi</string>
     <string id="30102">Includi Dizionari, Critica e Pubblico</string>
     <string id="30103">Visualizza in:</string>
@@ -17,6 +17,7 @@
     <string id="30202">In Hi-Res</string>
     <string id="30203">Trailer (lento)</string>
     <string id="30204">TMDB Backdrops (molto lento)</string>
+    <string id="30205">Voto, studio, mpaa, top250 da imdb (lento)</string>
     
     <string id="30300">Appendi al Plot</string>
     <string id="30301">Critica (lento)</string>
