@@ -8,15 +8,16 @@
     <setting label="30005" type="bool" id="fakeactor" default="false" enable="eq(-4,true)"/>
 
     <setting label="30100" type="lsep" />
-    <setting label="30101" type="bool" id="rating_ten" default="true"/>
+    <setting label="30101" type="bool" id="rating_ten" default="true" enable="!eq(8,true)"/>
     <setting label="30102" type="bool" id="other_rating" default="true"/>
-    <setting label="30103" type="labelenum" values="mpaa|studio|outline" id="tag_other_rating" default="studio" enable="eq(-1,true)"/>
+    <setting label="30103" type="labelenum" values="mpaa|studio|outline" id="tag_other_rating" default="outline" enable="eq(-1,true)"/>
 
     <setting label="30200" type="lsep" />
     <setting label="30201" type="bool" id="thumbs" default="true"/>
     <setting label="30202" type="bool" id="bigThumbs" default="true" enable="eq(-1,true)" />
     <setting label="30203" type="bool" id="trailer" default="true"/>
     <setting label="30204" type="bool" id="backdrops" default="true"/>
+    <setting label="30205" type="bool" id="imdb" default="true"/>
     
     <setting label="30300" type="lsep" />
     <setting label="30301" type="bool" id="critic" default="false"/>
